syntax = "proto3";

package proto;

option go_package = "./;proto";

import "google/protobuf/empty.proto";

message Villager {
    string Name = 1;
    string Personality = 2;
}

message FindByNameRequest {
    string Name = 1;
}

message FindAllResponse {
    repeated Villager Villagers = 1;
}

message FindStreamClientSideRequest {
    string Name = 1;
}

message FindStreamClientSideResponse {
    repeated Villager Villagers = 1;
}

service VillagersService {
    rpc FindAll (google.protobuf.Empty) returns (FindAllResponse); // unary
    rpc FindByName (FindByNameRequest) returns (Villager); // unary
    rpc FindAllStreamServerSide (google.protobuf.Empty) returns (stream Villager); // server-side stream
    rpc FindStreamClientSide (stream FindStreamClientSideRequest) returns (FindAllResponse); // client-side stream
}